@@ -72,7 +72,8 @@ dist_generic_DATA = \
 	generic/rfc2662.adsl-line.xml \
 	generic/rfc2670.docsis-if.xml \
 	generic/rfc2790.host-resources.xml \
-	generic/rfc2863.if-mib.xml
+	generic/rfc2863.if-mib.xml \
+	generic/rfc4319_hdsl2_shdsl_line.xml
 
 examplesdir   =  $(distxmldir)/examples
 dist_examples_DATA = \
