@@ -1,0 +1,196 @@
+<?xml version="1.0"?>
+<!--
+   Copyright (C) 2011  Stanislav Sinyagin
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+
+-->
+
+
+<!--
+   RFC 4219 (HDSL2-SHDSL-LINE-MIB)
+-->
+
+
+<configuration>
+
+<definitions>
+ <!-- HDSL2-SHDSL-LINE-MIB -->
+ <def name="hdsl2ShdslEndpointCurrAtn"    value="1.3.6.1.2.1.10.48.1.5.1.1"/>
+ <def name="hdsl2ShdslEndpointCurrSnrMgn" value="1.3.6.1.2.1.10.48.1.5.1.2"/>
+ <def name="hdsl2Shdsl15MinIntervalES"    value="1.3.6.1.2.1.10.48.1.6.1.2"/>
+ <def name="hdsl2Shdsl15MinIntervalSES"   value="1.3.6.1.2.1.10.48.1.6.1.3"/>
+ <def name="hdsl2Shdsl15MinIntervalCRCanomalies"
+                                          value="1.3.6.1.2.1.10.48.1.6.1.4"/>
+ <def name="hdsl2Shdsl15MinIntervalLOSWS" value="1.3.6.1.2.1.10.48.1.6.1.5"/>
+ <def name="hdsl2Shdsl15MinIntervalUAS"   value="1.3.6.1.2.1.10.48.1.6.1.6"/>
+</definitions>
+
+<datasources>
+
+  <template name="hdsl-subtree">
+    <param name="precedence"     value="-600" />
+    <param name="comment"        value="HDSL2/SHDSL line quality statistics" />
+    <param name="data-file">
+       %system-id%_%hdsl-endpoint-nick%_hdsl-line.rrd
+    </param>
+    <param name="collector-timeoffset-hashstring"
+                                       value="%system-id%:%hdsl-index%" />
+    <param name="descriptive-nickname" value="%system-id%:%interface-name%"/>
+    <param name="graph-title"          value="%descriptive-nickname%" />
+
+    <param name="has-overview-shortcuts" value="yes"/>
+    <param name="overview-shortcuts" value="snr"/>
+    
+    <param name="overview-subleave-name-snr" value="SNR_Summary"/>
+    <param name="overview-direct-link-snr"      value="yes"/>
+    <param name="overview-shortcut-text-snr"
+           value="All line SNR margins"/>
+    <param name="overview-shortcut-title-snr"
+           value="Show SNR margin graphs for all endpoints in one page"/>
+    <param name="overview-page-title-snr"
+           value="Snr quality Graphs"/>
+
+    <param name="rrd-hwpredict"     value="disabled" />
+  </template>
+
+  <template name="hdsl-interface">
+    <param name="has-overview-shortcuts" value="yes"/>
+    <param name="overview-shortcuts" value="signal"/>
+    
+    <param name="overview-subleave-name-signal" value="Signal_Summary"/>
+    <param name="overview-direct-link-signal"      value="yes"/>
+    <param name="overview-direct-link-view-signal" value="expanded-dir-html"/>
+    <param name="overview-shortcut-text-signal"
+           value="All endpoint signal levels"/>
+    <param name="overview-shortcut-title-signal"
+           value="Show signal quality graphs for all endpoints in one page"/>
+    <param name="overview-page-title-snr"
+           value="Signal quality Graphs"/>
+  </template>
+  
+  <template name="hdsl-endpoint">
+  
+    <leaf name="Signal_Summary">
+      <param name="comment"            value="Attenuation and SNR Margin" />
+      <param name="precedence"         value="1000" />
+      <param name="ds-type"            value="rrd-multigraph" />
+      <param name="ds-names"           value="atn,snr" />
+
+      <param name="ds-expr-atn"       value="{Attenuation}" />
+      <param name="graph-legend-atn"  value="Attenuation" />
+      <param name="line-style-atn"    value="LINE2" />
+      <param name="line-color-atn"    value="##one" />
+      <param name="line-order-atn"    value="1" />
+
+      <param name="ds-expr-snr"       value="{SNR_Margin}" />
+      <param name="graph-legend-snr"  value="SNR Margin" />
+      <param name="line-style-snr"    value="LINE2" />
+      <param name="line-color-snr"    value="##two" />
+      <param name="line-order-snr"    value="2" />
+
+      <param name="vertical-label"    value="dB" />
+      <param name="graph-lower-limit" value="0" />
+    </leaf>
+
+    <leaf name="Attenuation">
+      <param name="comment"            value="Current loop attenuation" />
+      <param name="snmp-object"
+          value="$hdsl2ShdslEndpointCurrAtn.%hdsl-index%" />
+      <param name="rrd-ds"             value="CurrAtn" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="dB" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="890" />
+      <param name="hidden"             value="yes" />
+    </leaf>
+
+    <leaf name="SNR_Margin">
+      <param name="comment"            value="Current SNR margin" />
+      <param name="snmp-object"
+          value="$hdsl2ShdslEndpointCurrSnrMgn.%hdsl-index%" />
+      <param name="rrd-ds"             value="CurrSnrMgn" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="dB" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="880" />
+      <param name="hidden"             value="yes" />
+    </leaf>
+    
+    
+    <leaf name="Prev_15min_ES">
+      <param name="comment"
+         value="Errored Seconds during the previous 15min interval"/>
+      <param name="snmp-object"
+          value="$hdsl2Shdsl15MinIntervalES.%hdsl-index%.1" />
+      <param name="rrd-ds"             value="15minES" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="seconds" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="870" />
+    </leaf>
+    
+    <leaf name="Prev_15min_SES">
+      <param name="comment"
+         value="Severely Errored Seconds during the previous 15min interval"/>
+      <param name="snmp-object"
+          value="$hdsl2Shdsl15MinIntervalSES.%hdsl-index%.1" />
+      <param name="rrd-ds"             value="15minSES" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="seconds" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="860" />
+    </leaf>
+    
+    <leaf name="Prev_15min_CRCA">
+      <param name="comment"
+         value="CRC anomalies during the previous 15min interval"/>
+      <param name="snmp-object"
+          value="$hdsl2Shdsl15MinIntervalCRCanomalies.%hdsl-index%.1" />
+      <param name="rrd-ds"             value="15minCRCA" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="anomalies" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="850" />
+    </leaf>
+    
+    <leaf name="Prev_15min_LOSWS">
+      <param name="comment"
+         value="Loss of Sync Word Seconds during the previous 15min interval"/>
+      <param name="snmp-object"
+          value="$hdsl2Shdsl15MinIntervalLOSWS.%hdsl-index%.1" />
+      <param name="rrd-ds"             value="15minLOSWS" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="seconds" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="840" />
+    </leaf>
+    
+    <leaf name="Prev_15min_UAS">
+      <param name="comment"
+         value="Unavailable Seconds during the previous 15min interval"/>
+      <param name="snmp-object"
+          value="$hdsl2Shdsl15MinIntervalUAS.%hdsl-index%.1" />
+      <param name="rrd-ds"             value="15minUAS" />
+      <param name="rrd-create-dstype"  value="GAUGE" />
+      <param name="vertical-label"     value="seconds" />
+      <param name="graph-lower-limit"  value="0" />
+      <param name="precedence"         value="830" />
+    </leaf>
+  </template>
+    
+</datasources>
+
+</configuration>
