@@ -1,5 +1,8 @@
 2011-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/DevDiscover/RFC4319_HDSL2_SHDSL_LINE_MIB.pm:
+	new discovery module for HDSL2-SHDSL-LINE-MIB
+
 	* xmlconfig/generic/rfc2863.if-mib.xml: added templates for
 	ifSpeed and ifHighSpeed
 	
